<resources>
    <string name="app_name">tp_final</string>

    //Datos de registros
    <string name="correo">Correo</string>
    <string name="contraseña">Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="dni">DNI</string>
    <string name="universidad">Universidad</string>
    <string name="pais">País</string>
    <string name="cambiar_usuario">Cambiar email</string>
    <string name="cambiar_contraseña">Cambiar contraseña</string>

    //Botones
    <string name="iniciar_sesion_btn">Iniciar Sesión</string>
    <string name="registrarse_btn">Registrarse</string>
    <string name="siguiente_btn">Siguiente</string>
    <string name="comenzar_btn">Comenzar a estudiar</string>
    <string name="practicar_preg">Practicar preguntas</string>
    <string name="practicar_examen">Practicar exámenes</string>
    <string name="volver_atras">Volver atrás</string>
    <string name="siguiente_preg_btn">Siguiente pregunta</string>
    <string name="finalizar_preg_btn">Comprobar pregunta</string>
    <string name="cerrar_sesion_btn">Cerrar Sesión</string>
    <string name="guardar_btn">Guardar</string>

    //Textos
    <string name="bienvenida"><h1>Bienvenido!</h1></string>
    <string name="bienvenida2"><h3>Inicia sesión o registrate para comenzar a estudiar</h3></string>
    <string name="registrarse_pnt"><h1>Registrate</h1></string>
    <string name="crear_cuenta"><h3>Create una cuenta para poder comenzar</h3></string>
    <string name="term_cond">Estoy de acuerdo con los términos y condiciones</string>
    <string name="tenes_cuenta">¿Ya tenés cuenta? Ingresá acá</string>
    <string name="elegir_materia">Elegí una materia</string>
    <string name="elegir_materia_2">Múltiples materias están disponibles.\nSeleccioná una para comenzar a estudiar.</string>
    <string name="mi_cuenta">Mi cuenta</string>
    <string name="abrir_menu_desplegable">Menu desplegable abierto</string>
    <string name="cerrar_menu_desplegable">Menu desplegable cerrado</string>

    //Titulos de menú
    <string name="obtener_ayuda">Ayuda</string>
    <string name="ayuda">Ayuda</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="menu">Menú</string>
    <string name="configuracion">Configuraciones</string>
    <string name="activar_alarma">Activar notificaciones de aviso</string>

</resources>